Fixing blockquote styling on mobile

--- a/scss/_writing-blockquote.scss
+++ b/scss/_writing-blockquote.scss
@@ -17,7 +17,9 @@
 	}
 
 	.content {
-		padding: 0 12%;
+		@media #{$medium-up} {
+			padding: 0 12%;
+		}
 	}
 	
 	.text {
