--- a/stylesheets/style.css
+++ b/stylesheets/style.css
@@ -9548,11 +9548,13 @@ a:hover {
 #writing .blockquote.last {
   padding-bottom: 3em;
 }
-/* line 19, ../scss/_writing-blockquote.scss */
-#writing .blockquote .content {
-  padding: 0 12%;
+@media only screen and (min-width: 40.063em) {
+  /* line 19, ../scss/_writing-blockquote.scss */
+  #writing .blockquote .content {
+    padding: 0 12%;
+  }
 }
-/* line 23, ../scss/_writing-blockquote.scss */
+/* line 25, ../scss/_writing-blockquote.scss */
 #writing .blockquote .text {
   padding-left: 0.9375rem;
   padding-right: 0.9375rem;
@@ -9560,7 +9562,7 @@ a:hover {
   float: left;
 }
 @media only screen and (min-width: 40.063em) {
-  /* line 23, ../scss/_writing-blockquote.scss */
+  /* line 25, ../scss/_writing-blockquote.scss */
   #writing .blockquote .text {
     padding-left: 0.9375rem;
     padding-right: 0.9375rem;
@@ -9568,11 +9570,11 @@ a:hover {
     float: left;
   }
 }
-/* line 31, ../scss/_writing-blockquote.scss */
+/* line 33, ../scss/_writing-blockquote.scss */
 #writing .blockquote .text p:last-child {
   margin-bottom: 0;
 }
-/* line 35, ../scss/_writing-blockquote.scss */
+/* line 37, ../scss/_writing-blockquote.scss */
 #writing .blockquote .quote {
   padding-left: 0.9375rem;
   padding-right: 0.9375rem;
@@ -9581,7 +9583,7 @@ a:hover {
   padding-top: 1em;
 }
 @media only screen and (min-width: 40.063em) {
-  /* line 35, ../scss/_writing-blockquote.scss */
+  /* line 37, ../scss/_writing-blockquote.scss */
   #writing .blockquote .quote {
     padding-left: 0.9375rem;
     padding-right: 0.9375rem;
@@ -9589,14 +9591,14 @@ a:hover {
     float: left;
   }
 }
-/* line 43, ../scss/_writing-blockquote.scss */
+/* line 45, ../scss/_writing-blockquote.scss */
 #writing .blockquote .quote blockquote {
   color: #ff8a00;
   font-size: 1.5em;
   line-height: 1.3;
   border: none;
 }
-/* line 49, ../scss/_writing-blockquote.scss */
+/* line 51, ../scss/_writing-blockquote.scss */
 #writing .blockquote .quote cite {
   margin-top: 1em;
 }
